# dark_kitchen_simulator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  REPORT.md  SKILLS.md  agent_task_spec_bonus_k8s_observability_hpa_mesh (1).md  dark-kitchen.code-workspace  tz_agent_stage_10_station_simulator_service_ascii.md  tz_agent_stage_11_metrics_mongo_grafana_ascii (2).md  tz_agent_stage_12_docker_compose_demo_ascii.md  tz_agent_stage_13_kubernetes_minikube_ascii.md  ТЗ.md
deploy/compose/: docker-compose.yml  prometheus.yml
docs/k8s/: bonus-observability-hpa-service-mesh.md  minikube.md
docs/practice4/: report-evidence-checklist.md
libs/python/dk_common/: README.md  correlation.py  errors.py  health.py  logging.py  metrics.py  pyproject.toml  settings.py  ТЗ.md
libs/python/dk_common/tests/: test_correlation.py  test_errors.py  test_health.py  test_logging.py  test_metrics.py  test_settings.py
practicies/practice_1/: README.md  problem_statement.md
practicies/practice_2/: PRACTICE2.md  test_run_command.md
practicies/practice_4/: README.md
scripts/demo/: .demo_state.env  .demo_state.json  run-demo.sh  seed_demo_data.py  smoke_demo.py
scripts/k8s/: collect-practice-evidence.sh  deploy-minikube.sh  install-kube-prometheus-stack.sh  install-linkerd.sh  install-metrics-server.sh  load-test-hpa.sh  minikube-build-images.sh  run-migrations.sh  verify-hpa.sh  verify-observability.sh  verify-service-mesh.sh  wait-for-k8s.sh
services/fulfillment-service/: .env.example  Dockerfile  README.md  pyproject.toml  tz_agent_stage_5.md  tz_agent_stage_7_fulfillment_internal_task_transitions_ascii.md  ТЗ.md
services/fulfillment-service/alembic/: env.py
services/fulfillment-service/alembic/versions/: 0001_create_fulfillment_service_tables.py  0002_add_task_queue_publish_fields.py  0003_add_task_dispatch_indexes.py
services/fulfillment-service/app/: config.py  errors.py  main.py  models.py  repositories.py  schemas.py  services.py  task_builder.py
services/fulfillment-service/app/api/: routes.py
services/fulfillment-service/app/clients/: base.py  kitchen.py  menu.py
services/fulfillment-service/app/domain/: errors.py  statuses.py  transitions.py
services/fulfillment-service/app/events/: mongo.py  task_events.py
services/fulfillment-service/app/metrics/: business_metrics.py
services/fulfillment-service/app/redis/: client.py  streams.py
services/fulfillment-service/tests/: conftest.py  test_events.py  test_health.py  test_internal_task_transitions.py  test_metrics.py  test_no_worker_logic.py  test_order_creation.py  test_order_creation_redis_failure.py  test_orders_api.py  test_redis_streams.py  test_task_builder.py  test_task_queued_event.py
services/kitchen-scheduler-worker/: .env.example  AGENTS.md  Dockerfile  README.md  go.mod  (+1 more)
services/menu-service/: .env.example  Dockerfile  README.md  pyproject.toml  ТЗ.md
services/menu-service/alembic/: env.py
services/menu-service/alembic/versions/: 0001_create_menu_service_tables.py
services/menu-service/app/: config.py  db.py  errors.py  main.py  models.py  repositories.py  schemas.py  services.py
services/menu-service/app/api/: routes.py
services/menu-service/tests/: conftest.py  test_availability.py  test_health.py  test_menu_items.py  test_metrics.py  test_recipe_steps.py
services/station-simulator-service/: .env.example  Dockerfile  README.md  pyproject.toml
services/station-simulator-service/app/: main.py
services/station-simulator-service/app/core/: config.py
services/station-simulator-service/app/kds_client/: client.py  schemas.py
services/station-simulator-service/app/metrics/: metrics.py
services/station-simulator-service/app/simulator/: config_parser.py  duration.py  runner.py  worker.py
services/station-simulator-service/tests/: conftest.py  test_config_parser.py  test_duration.py  test_health.py  test_kds_client.py  test_metrics.py  test_worker_loop.py
(+112 files in other folders)
