[tool.poetry]
name = "menu-service"
version = "0.1.0"
description = "Menu Service for dark kitchen project"
authors = ["MartyrMind <v.ratenau@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.115.0,<1.0.0"
uvicorn = { extras = ["standard"], version = ">=0.30.0,<1.0.0" }
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
sqlalchemy = ">=2.0.0,<3.0.0"
alembic = ">=1.13.0,<2.0.0"
asyncpg = ">=0.29.0,<1.0.0"
dk-common = { path = "../../libs/python/dk_common", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"
aiosqlite = "^0.20"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
