[tool.poetry]
name = "station-simulator-service"
version = "0.1.0"
description = "Station Simulator Service for dark kitchen demo"
authors = ["Dark Kitchen Team"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.115.0,<1.0.0"
uvicorn = { extras = ["standard"], version = ">=0.30.0,<1.0.0" }
httpx = ">=0.27.0,<1.0.0"
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
prometheus-client = ">=0.20.0,<1.0.0"
dk-common = { path = "../../libs/python/dk_common", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
respx = "^0.21"
httpx = "^0.27"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
