[project]
name = "dk-common"
version = "0.1.0"
description = "Common infrastructure utilities for Dark Kitchen Python services"
authors = [
    { name = "Dark Kitchen Team" },
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "loguru>=0.7.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    "starlette>=0.37.0,<1.0.0",
]

[tool.poetry]
packages = [{ include = "dk_common", from = ".." }]

[tool.poetry.group.dev.dependencies]
httpx = ">=0.27.0,<1.0.0"
pytest = ">=8.0.0,<9.0.0"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
norecursedirs = [".venv", ".pytest_cache", "pytest-cache-files-*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
